--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="intro-text">
       <h2>Atanasio Dev Space</h2>
       <p>System.out.println("Welcome :D");</p>
-      <a href="#features" class="btn-get-started scrollto">Get Started</a>
+      <a href="#features" class="btn-get-started scrollto">작품보기</a>
      
       <a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="btn-get-started scrollto">
         제작도움 : 조코딩 유튜브 채널</a>
