--- a/animalface.html
+++ b/animalface.html
@@ -67,7 +67,7 @@
 
     <div class="intro-text">
       <h2>얼굴로 알아보는 동물상 테스트</h2>
-      <a href="#features" class="btn-get-started scrollto">동물상 알아보기</a>
+      <a href="#animal" class="btn-get-started scrollto">동물상 알아보기</a>
       <a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="btn-get-started scrollto">
         제작도움 : 조코딩 유튜브 채널</a>
 
