--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <h4 class="title"><a href="animalface.html">내얼굴은 무슨 동물상 일까?</a></h4>
                 <p class="description">얼굴 사진으로 알아보는 동물상 테스트!! <br>요즘 핫한 AI, 머신러닝 기술!</p>
               </div>
-              <div class="col-lg-6 col-md-6 box wow fadeInRight" data-wow-delay="0.1s">
+              <!-- <div class="col-lg-6 col-md-6 box wow fadeInRight" data-wow-delay="0.1s">
                 <div class="icon"><i class="ion-ios-flask-outline"></i></div>
                 <h4 class="title"><a href="">ios</a></h4>
                 <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata noble dynala mark.</p>
@@ -207,7 +207,7 @@
                 <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
                 <h4 class="title"><a href="">etc</a></h4>
                 <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum dinoun trade capsule.</p>
-              </div>
+              </div> -->
             </div>
 
           </div>
