--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </p>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-6 about-img wow fadeInLeft">
             <img src="img/about-img.jpg" alt="">
           </div>
@@ -157,10 +157,11 @@
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Libero justo laoreet sit amet cursus sit amet dictum sit. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec
             </p>
           </div>
-        </div>
+        </div> -->
 
       </div>
-    </section><!-- #about -->
+    </section>
+    <!-- #intro -->
 
     <!--==========================
       Product Featuress Section
