--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </p>
         </div>
 
-        <!-- <div class="row">
+        <div class="row">
           <div class="col-lg-6 about-img wow fadeInLeft">
             <img src="img/about-img.jpg" alt="">
           </div>
@@ -157,7 +157,7 @@
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Libero justo laoreet sit amet cursus sit amet dictum sit. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec
             </p>
           </div>
-        </div> -->
+        </div>
 
       </div>
     </section>
@@ -194,21 +194,31 @@
                 <h4 class="title"><a href="animalface.html">내얼굴은 무슨 동물상 일까?</a></h4>
                 <p class="description">얼굴 사진으로 알아보는 동물상 테스트!! <br>요즘 핫한 AI, 머신러닝 기술!</p>
               </div>
-              <!-- <div class="col-lg-6 col-md-6 box wow fadeInRight" data-wow-delay="0.1s">
+              <div class="col-lg-6 col-md-6 box wow fadeInRight" data-wow-delay="0.1s">
                 <div class="icon"><i class="ion-ios-flask-outline"></i></div>
-                <h4 class="title"><a href="">ios</a></h4>
-                <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata noble dynala mark.</p>
+                <h4 class="title"><a href="">작품이름</a></h4>
+                <p class="description">준비중 입니다.</p>
               </div>
               <div class="col-lg-6 col-md-6 box wow fadeInRight" data-wow-delay="0.2s">
                 <div class="icon"><i class="ion-social-buffer-outline"></i></div>
-                <h4 class="title"><a href="">Web</a></h4>
-                <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur teleca starter sinode park ledo.</p>
+                <h4 class="title"><a href="">작품이름</a></h4>
+                <p class="description">준비중 입니다.</p>
               </div>
               <div class="col-lg-6 col-md-6 box wow fadeInRight" data-wow-delay="0.3s">
                 <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-                <h4 class="title"><a href="">etc</a></h4>
-                <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum dinoun trade capsule.</p>
-              </div> -->
+                <h4 class="title"><a href="">작품이름</a></h4>
+                <p class="description">준비중 입니다.</p>
+              </div>
+              <div class="col-lg-6 col-md-6 box wow fadeInRight" data-wow-delay="0.3s">
+                <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
+                <h4 class="title"><a href="">작품이름</a></h4>
+                <p class="description">준비중 입니다.</p>
+              </div>
+              <div class="col-lg-6 col-md-6 box wow fadeInRight" data-wow-delay="0.3s">
+                <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
+                <h4 class="title"><a href="">작품이름</a></h4>
+                <p class="description">준비중 입니다.</p>
+              </div>
             </div>
 
           </div>
@@ -217,7 +227,8 @@
 
       </div>
 
-    </section><!-- #features -->
+    </section>
+    <!-- #features -->
 
     <!--==========================
       Product Advanced Featuress Section
