Works decription update

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
               <div class="col-lg-6 col-md-6 box wow fadeInRight">
                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
                
-                <h4 class="title"><a href="animalface.html">내얼굴은 무슨 동물상 일까?</a></h4>
-                <p class="description">얼굴 사진으로 알아보는 동물상 테스트!! <br>요즘 핫한 AI, 머신러닝 기술!</p>
+                <h4 class="title"><a href="animalface.html">동물상 테스트</a></h4>
+                <p class="description">내얼굴은 어떤 동물상 일까? <br>요즘 핫한 인공지능, 머신러닝 기술!</p>
               </div>
               <div class="col-lg-6 col-md-6 box wow fadeInRight" data-wow-delay="0.1s">
                 <div class="icon"><i class="ion-ios-flask-outline"></i></div>
