Works decription update

--- a/index.html
+++ b/index.html
@@ -141,21 +141,19 @@
           </div>
 
           <div class="col-lg-6 content wow fadeInRight">
-            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elite storium paralate</h2>
-            <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-
+            <h2>주니어 개발자, 아타나시오 입니다.</h2>
+            <h3>여러가지 기술로 만들어진 서비스를 소개합니다.</h3>
             <ul>
-              <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="ion-android-checkmark-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="ion-android-checkmark-circle"></i> "플랫폼"에 얽매이지 않는 개발자를 지향합니다.</li>
+              <li><i class="ion-android-checkmark-circle"></i> "어떤 기술이든" 두려워 하지않고 배우는걸 좋아합니다.</li>
+              <li><i class="ion-android-checkmark-circle"></i> 좋은 개발자는 "커뮤니케이션"이 중요하다고 생각합니다 .</li>
+              <br>
+              <p>개발자는 마치 의사와 닮아 있다고 생각합니다.<br><br>
+                 메디컬 드라마속 의사들을 보면 끊임 없이 연구하고 공부하여 환자를 살립니다.<br>
+                 10시간이 넘는 어려운 수술을 할때도 많습니다.<br><br>
+                 개발을 하는것도 힘든 수술을 하는것 처럼 어려울 때도 많지만,<br>
+                 결과물이 나왔을때 성취감은 정말 짜릿합니다. 저는 개발자의 삶이 좋습니다 ^^</p>
             </ul>
-
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum Libero justo laoreet sit amet cursus sit amet dictum sit. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec
-            </p>
           </div>
         </div>
 
