--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
 
     <div class="intro-text">
       <h2>Atanasio Dev Space</h2>
-      <p>System.out.println("Welcome :D");</p>
+      <p>
+        System.out.println("hello world");<br>
+        console.log("accessed my site");
+      </p>
+      <p></p>
       <a href="#features" class="btn-get-started scrollto">작품보기</a>
      
       <a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="btn-get-started scrollto">
@@ -752,7 +756,9 @@
                   <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center"><button type="submit" title="Send Message">Send Message</button></div>
+                <div class="text-center">
+                  <button type="submit" title="Send Message">Send Message</button>
+                </div>
               </form>
             </div>
           </div>
