--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 
     <div class="intro-text">
       <h2>Atanasio Dev Space</h2>
-      <p>
+      <p style="font-size: 20px;">
         System.out.println("hello world");<br>
         console.log("accessed my site");
       </p>
-      <p></p>
+    
       <a href="#features" class="btn-get-started scrollto">작품보기</a>
      
       <a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="btn-get-started scrollto">
@@ -145,7 +145,7 @@
           </div>
 
           <div class="col-lg-6 content wow fadeInRight">
-            <h2>주니어 개발자, 아타나시오 입니다.</h2>
+            <h2>주니어 개발자,<br> 아타나시오 입니다.</h2>
             <h3>여러가지 기술로 만들어진 서비스를 소개합니다.</h3>
             <ul>
               <li><i class="ion-android-checkmark-circle"></i> "플랫폼"에 얽매이지 않는 개발자를 지향합니다.</li>
