자잘한것 수정

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
               <li><i class="ion-android-checkmark-circle"></i> "어떤 기술이든" 두려워 하지않고 배우는걸 좋아합니다.</li>
               <li><i class="ion-android-checkmark-circle"></i> 좋은 개발자는 "커뮤니케이션"이 중요하다고 생각합니다 .</li>
               <br>
-              <p>개발자는 마치 의사와 닮아 있다고 생각합니다.<br><br>
+              <p>개발자는 마치 의사와 닮아 있다고 생각합니다.<br>
                  메디컬 드라마속 의사들을 보면 끊임 없이 연구하고 공부하여 환자를 살립니다.<br>
-                 10시간이 넘는 어려운 수술을 할때도 많습니다.<br><br>
+                 10시간이 넘는 어려운 수술을 할때도 많습니다.<br>
                  개발을 하는것도 힘든 수술을 하는것 처럼 어려울 때도 많지만,<br>
                  결과물이 나왔을때 성취감은 정말 짜릿합니다. 저는 개발자의 삶이 좋습니다 ^^</p>
             </ul>
