기본 레이아웃 구성  version 1.0

--- a/index.html
+++ b/index.html
@@ -312,9 +312,8 @@
 
         <div class="col-lg-6">
           <nav class="footer-links text-lg-right text-center pt-2 pt-lg-0">
-            <img src="img/youtube-copy.jpg">
-            <a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="scrollto">제작도움 : 조코딩 유튜브 채널</a>
-
+            <a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="scrollto">
+              <strong>Thanks to ... 조코딩</strong></a><img src="../img/youtube-copy.jpg">
           </nav>
         </div>
 
