자잘한것 수정

--- a/crawl/index.html
+++ b/crawl/index.html
@@ -141,7 +141,7 @@
         <div class="col-lg-6">
           <nav class="footer-links text-lg-right text-center pt-2 pt-lg-0">
             <a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="scrollto">
-              <strong>Thanks to ... 조코딩</strong></a><img src="../img/youtube-copy.jpg">
+              <strong>Thanks to ... 조코딩</strong><img src = "../img/youtube-copy.jpg"></a>
           </nav>
         </div>
 
