잘생김 못생김

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   </head>
   <body>
     <div>
-      <h2>얼굴 파일은 판독 용도로만 사용됩니다.</h2>
+      <h2>얼굴 사진은 판독 용도로만 사용됩니다.</h2>
       <h3>서버에 저장되지 않습니다.</h3>
+      <h3>1.Start 버튼을 누른다.</h3>
+      <h3>2.얼굴 사진을 업로드 한다.</h3>
+      <h3>3.얼굴평가 버튼을 누른다.</h3>
     </div>
-    <button type="button" onclick="init()">먼저 눌러주세요</button>
+    <button type="button" onclick="init()">Start</button>
     <button type="button" onclick="predict()">얼굴평가 시작</button>
 
     <script
