--- a/index.html
+++ b/index.html
@@ -43,20 +43,6 @@
       <h2 class="subtitle">내 얼굴은 상위 몇% 일까?</h2>
     </section>
 
-    <section class="youtube">
-      <div class="container mt-5 youtube-cover">
-        <a
-          href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg"
-          class="youtube-link"
-          >Thanks to 조코딩</a
-        ><img
-          src="img/youtube-icon-3.jpg"
-          alt="youtube-icon"
-          class="youtube-icon"
-        />
-      </div>
-    </section>
-
     <button type="button" onclick="init()">Start</button>
 
     <!-- 부트스트랩 script 시작 -->
@@ -198,5 +184,19 @@
       });
     </script>
     <button type="button" onclick="predict()">얼굴평가 시작</button>
+
+    <section class="mb-5 youtube">
+      <div class="container pt-5 mt-5 youtube-cover">
+        <a
+          href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg"
+          class="youtube-link"
+          >Thanks to 조코딩</a
+        ><img
+          src="img/youtube-icon-3.jpg"
+          alt="youtube-icon"
+          class="youtube-icon"
+        />
+      </div>
+    </section>
   </body>
 </html>
