--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
       <h2 class="subtitle">내 얼굴은 상위 몇% 일까?</h2>
     </section>
 
+    <li>1. Start 버튼을 누른다. (반응 없는게 정상)</li>
+    <li>2. 얼굴 사진을 등록한다.</li>
+    <li>3. 얼굴평가 시작 버튼을 누른다. (잠시 기다린다)</li>
+    <li>@_@ 테스트 버전 입니다.</li>
+
     <button type="button" onclick="init()">Start</button>
 
     <!-- 부트스트랩 script 시작 -->
