--- a/index.html
+++ b/index.html
@@ -109,6 +109,22 @@
       </div>
     </div>
 
+    <button type="button" onclick="predict()">얼굴평가 시작</button>
+
+    <section class="mb-5 youtube">
+      <div class="container pt-5 mt-5 youtube-cover">
+        <a
+          href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg"
+          class="youtube-link"
+          >Thanks to 조코딩</a
+        ><img
+          src="img/youtube-icon-3.jpg"
+          alt="youtube-icon"
+          class="youtube-icon"
+        />
+      </div>
+    </section>
+
     <div id="webcam-container"></div>
     <div id="label-container"></div>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
@@ -188,20 +204,35 @@
         $(".image-upload-wrap").removeClass("image-dropping");
       });
     </script>
-    <button type="button" onclick="predict()">얼굴평가 시작</button>
 
-    <section class="mb-5 youtube">
-      <div class="container pt-5 mt-5 youtube-cover">
-        <a
-          href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg"
-          class="youtube-link"
-          >Thanks to 조코딩</a
-        ><img
-          src="img/youtube-icon-3.jpg"
-          alt="youtube-icon"
-          class="youtube-icon"
-        />
-      </div>
-    </section>
+    <!-- 댓글기능  -->
+    <div id="disqus_thread"></div>
+    <script>
+      /**
+       *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+       *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+      /*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+      (function () {
+        // DON'T EDIT BELOW THIS LINE
+        var d = document,
+          s = d.createElement("script");
+        s.src = "https://dev-atanasio.disqus.com/embed.js";
+        s.setAttribute("data-timestamp", +new Date());
+        (d.head || d.body).appendChild(s);
+      })();
+    </script>
+    <noscript
+      >Please enable JavaScript to view the
+      <a href="https://disqus.com/?ref_noscript"
+        >comments powered by Disqus.</a
+      ></noscript
+    >
+
+    <!-- 댓글기능 끝 -->
   </body>
 </html>
