--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     />
     <!-- # Bootstrap CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>얼평 테스트</title>
   </head>
 
   <body>
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light nav-distance">
-      <a class="navbar-brand" href="#">얼평 테스트</a>
+      <a class="navbar-brand" href="./index.html">얼평 테스트</a>
 
       <button
         class="navbar-toggler"
@@ -42,14 +42,7 @@
       <h1 class="title">인공지능 얼굴평가 테스트</h1>
       <h2 class="subtitle">내 얼굴은 상위 몇% 일까?</h2>
     </section>
-
-    <li>1. Start 버튼을 누른다. (반응 없는게 정상)</li>
-    <li>2. 얼굴 사진을 등록한다.</li>
-    <li>3. 얼굴평가 시작 버튼을 누른다. (잠시 기다린다)</li>
-    <li>@_@ 테스트 버전 입니다.</li>
-
-    <button type="button" onclick="init()">Start</button>
-
+    <h3 class="version-text">@_@ 테스트 버전입니다.</h3>
     <!-- 부트스트랩 script 시작 -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -78,6 +71,7 @@
       title="Becris">Becris</a> from 
       <a href="https://www.flaticon.com/kr/"
        title="Flaticon"> www.flaticon.com</a> -->
+
     <div class="container file-upload">
       <div class="image-upload-wrap">
         <input
@@ -101,32 +95,41 @@
           src="#"
           alt="your image"
         />
+        <!-- 로딩 시작 -->
+        <div id="loading" class="animated bounce">
+          <div class="spinner-border" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+          <div class="loading-text">
+            <p class="text-center">AI가 당신의 얼굴을 분석중입니다.</p>
+          </div>
+        </div>
+        <!-- 로딩 끝 -->
+        <!-- 결과값 시작 -->
+        <p class="result-message"></p>
+        <div id="label-container" class="label-container"></div>
+        <!-- 결과값 끝 -->
         <div class="image-title-wrap">
           <button type="button" onclick="removeUpload()" class="remove-image">
-            Remove <span class="image-title">Uploaded Image</span>
+            다른 사진으로 재시도
           </button>
         </div>
       </div>
     </div>
-
-    <button type="button" onclick="predict()">얼굴평가 시작</button>
-
     <section class="mb-5 youtube">
       <div class="container pt-5 mt-5 youtube-cover">
         <a
           href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg"
           class="youtube-link"
           >Thanks to 조코딩</a
-        ><img
-          src="img/youtube-icon-3.jpg"
-          alt="youtube-icon"
-          class="youtube-icon"
-        />
+        ><a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg"
+          ><img
+            src="img/youtube-icon-3.jpg"
+            alt="youtube-icon"
+            class="youtube-icon"
+        /></a>
       </div>
     </section>
-
-    <div id="webcam-container"></div>
-    <div id="label-container"></div>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script type="text/javascript">
@@ -162,11 +165,32 @@
         // predict can take in an image, video or canvas html element
         var image = document.getElementById("face-image");
         const prediction = await model.predict(image, false);
+        // 결과값 내림차순 정렬 ( 큰값이 상단에 )
+        prediction.sort(
+          (a, b) => parseFloat(b.probability) - parseFloat(a.probability)
+        );
+
+        // 결과값에 따른 문구
+        var resultMsg;
+        switch (prediction[0].className) {
+          case "잘생긴":
+            resultMsg = "잘생기셨네요";
+            break;
+          case "못생긴":
+            resultMsg = "못생기셨네요";
+            break;
+          default:
+            resultMsg = "알수없음";
+        }
+
+        $(".result-message").html(resultMsg);
+
         for (let i = 0; i < maxPredictions; i++) {
           const classPrediction =
             prediction[i].className +
             ": " +
-            prediction[i].probability.toFixed(2);
+            prediction[i].probability.toFixed(2) * 100 +
+            "%";
           labelContainer.childNodes[i].innerHTML = classPrediction;
         }
       }
@@ -179,14 +203,17 @@
 
           reader.onload = function (e) {
             $(".image-upload-wrap").hide();
-
+            $("#loading").show();
             $(".file-upload-image").attr("src", e.target.result);
             $(".file-upload-content").show();
-
-            $(".image-title").html(input.files[0].name);
           };
 
           reader.readAsDataURL(input.files[0]);
+          // 모델을 온 다음 결과값을 불러온다.
+          init().then(function () {
+            predict(); // 결과값을 나타낸다.
+            $("#loading").hide();
+          });
         } else {
           removeUpload();
         }
@@ -232,7 +259,10 @@ this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your pag
         >comments powered by Disqus.</a
       ></noscript
     >
-
     <!-- 댓글기능 끝 -->
+
+    <!-- 차트 -->
+
+    <!-- 차트 끝 -->
   </body>
 </html>
