편의성 개선

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!--# Nav Bar 끝-->
     <section class="section">
       <h1 class="title">인공지능 얼굴평가 테스트</h1>
-      <h2 class="subtitle">내 얼굴은 상위 몇% 일까?</h2>
+      <h2 class="subtitle">내 얼굴을 평가해줘</h2>
     </section>
     <h3 class="version-text">@_@ 테스트 버전입니다.</h3>
     <!-- 부트스트랩 script 시작 -->
