--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="title" content="얼굴평가 테스트" />
+    <meta
+      name="subject"
+      content="얼굴로 보는 인공지능 얼굴평 테스트, 나와 닮은 연예인을 찾아보세요!"
+    />
+    <meta name="keywords" content="인공지능 얼굴 테스트, 얼굴상, 얼굴상 테스트,
+    나와 닮은 연예인, 연예인 찾기, 얼굴 점수, 얼굴, 연예인얼굴, facetest,
+    인공지능 얼굴평가, 인공지능 얼평, AI 얼평, AI 얼굴평가, AI얼굴>
+    <meta name="author" content="아타나시오" />
+    <meta property="og:url" content="https://animalface.site" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="동물상 테스트" />
+
+    <meta property="og:url" content="https://dev-atanasio.ga" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="얼굴평가 테스트" />
+    <meta
+      property="og:description"
+      content="얼굴로 보는 인공지능 잘생김 테스트, 나와 닮은 연예인을 찾아보세요! 대표 연예인 사진 데이터로 학습한 인공지능이 나의 얼굴로 잘생김 정도를 찾아드립니다. 회원가입도 필요없이 화면에서 바로 확인해보세요! 사진 데이터는 그 어디에도 전송되지 않습니다. 인공지능이 보는 나의 얼굴평가 테스트 한번 해보세요! 얼굴평가 테스트를 통해 나와 닮은 연예인을 찾을 수 있습니다."
+    />
     <!-- # Required meta tags -->
     <!-- Bootstrap CSS -->
     <link
@@ -265,4 +285,23 @@ this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your pag
 
     <!-- 차트 끝 -->
   </body>
+  <!-- 
+image input box
+Copyright (c) 2020 by Aaron Vanston (https://codepen.io/aaronvanston/pen/yNYOXR)
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+gender toggle
+Copyright (c) 2020 by Mert Cukuren (https://codepen.io/knyttneve/pen/bPpEZY)
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ -->
 </html>
