--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
       <h1 class="title">인공지능 얼굴평가 테스트</h1>
       <h2 class="subtitle">내 얼굴을 평가해줘</h2>
     </section>
-    <h3 class="version-text">여성 버전 입니다. 남성 버전 준비중 입니다^^</h3>
+    <h3 class="version-text">여성 버전 입니다. 남성 버전도 준비중 입니다^^</h3>
+    <h3 class="admin-msg-text">
+      안심하세요!! 사진은 서버에 절대 저장되지 않습니다.<br /><br />
+      하단 댓글란에 피드백 부탁드립니다. 개발자에게 힘이 됩니다!
+    </h3>
     <!-- 부트스트랩 script 시작 -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
