링크 썸네일 수정

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     나와 닮은 연예인, 연예인 찾기, 얼굴 점수, 얼굴, 연예인얼굴, facetest,
     인공지능 얼굴평가, 인공지능 얼평, AI 얼평, AI 얼굴평가, AI얼굴>
     <meta name="author" content="아타나시오" />
-    <meta property="og:url" content="https://animalface.site" />
+    <meta property="og:url" content="https://dev-atanasio.ga" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="이쁨 테스트" />
 
