워딩변경 -> 매력테스트

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="title" content="얼굴평가 테스트" />
+    <meta name="title" content="매력 테스트" />
     <meta
       name="subject"
-      content="얼굴로 보는 인공지능 얼굴평 테스트, 나와 닮은 연예인을 찾아보세요!"
+      content="얼굴로 보는 인공지능 매력 테스트, 나와 닮은 연예인을 찾아보세요!"
     />
     <meta name="keywords" content="인공지능 얼굴 테스트, 얼굴상, 얼굴상 테스트,
     나와 닮은 연예인, 연예인 찾기, 얼굴 점수, 얼굴, 연예인얼굴, facetest,
@@ -33,13 +33,13 @@
     />
     <!-- # Bootstrap CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>얼평 테스트</title>
+    <title>AI 머신러닝</title>
   </head>
 
   <body>
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light nav-distance">
-      <a class="navbar-brand" href="./index.html">얼평 테스트</a>
+      <a class="navbar-brand" href="./index.html">매력 테스트</a>
 
       <button
         class="navbar-toggler"
@@ -55,8 +55,8 @@
     </nav>
     <!--# Nav Bar 끝-->
     <section class="section">
-      <h1 class="title">인공지능 얼굴평가 테스트</h1>
-      <h2 class="subtitle">내 얼굴을 평가해줘</h2>
+      <h1 class="title">인공지능 매력평가 테스트</h1>
+      <h2 class="subtitle">내 매력을 평가해줘</h2>
     </section>
     <h3 class="version-text">여성 버전 입니다. 남성 버전도 준비중 입니다^^</h3>
     <h3 class="admin-msg-text">
